# Orchestratex

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  aem.py  deploy.py  orchestratex.py  orchestratex_core.py  orchestrator.py  orchestrator_core.py  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  requirements.txt  run_all.bat  run_all_enhanced.bat  run_tests.bat  run_tests_v2.bat  setup.py  setup_and_run.ps1  test_environment.py
agents/: adaptive_learning.py  analytics.py  base.py  collaboration.py  gamification.py  mentor.py  quantum.py  quantum_marl_agent.py  rag.py  security.py  voice.py
ai/: __init__.py  code_patterns.py  optimizers.py  qwen_coder.py
analytics/: dashboard.py
cli/: orchestratex_cli.py
config/: agents.yaml  backup_procedures.yaml  hsm_config.yaml  monitoring_stack.yaml  observability.yaml  plugins.yaml  security.yaml  security_policies.yaml  test_config.yaml  workflows.yaml
core/: environment_manager.py  error_handling.py  progress_decorator.py  progress_manager.py  project_manager.py  recovery_manager.py
dashboard/: completion_dashboard.py
data/: example_queries.json  schema.json
docs/: README.md  architecture.md  developer_guide.md  devops_manual.md  index.md  phoenix_packet.md  troubleshooting_guide.md  user_guide.md  video_guide.md
education/: adaptive_skill_tree.py  learning_manager.py  mentorship_engine.py
feedback/: real_time_feedback.py
gamification/: advanced_gamification.py  gamification_manager.py
governance/: agent_guardrails.py
gui/: README.md  main.py  (+1 more)
(+315 files in other folders)
