[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestratex"
version = "0.1.0"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = ["-v", "--cov=src", "--cov-report=term-missing", "--cov-report=html"]
